manifests/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: rest-http-example
  labels:
    app: rest-http-example
    app.kubernetes.io/instance: rest-http-example
    app.kubernetes.io/name: java
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  selector:
    app: rest-http-example
    deploymentconfig: rest-http-example
